# eth-zurich-solution

./: README.md
smb_common/smb_control/: package.xml
smb_common/smb_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml
smb_common/smb_control/launch/: control.launch
smb_common/smb_description/: CMakeLists.txt  package.xml
smb_common/smb_description/launch/: load.launch
smb_common/smb_description/rviz/: smb_description.rviz
smb_common/smb_description/urdf/: smb_ros_control.gazebo.xacro  smb_standalone.urdf.xacro  smb_utils.urdf.xacro
smb_common/smb_gazebo/launch/: smb_gazebo.launch
smb_common_v2/: jenkins-pipeline
smb_common_v2/smb_control/: CMakeLists.txt
smb_common_v2/smb_control/config/: control.yaml  localization.yaml
smb_common_v2/smb_description/: README.md
smb_common_v2/smb_description/launch/: debug.launch
smb_common_v2/smb_description/urdf/: smb.urdf.xacro  smb_big_properties.urdf.xacro  smb_ros_skid_steer.gazebo.xacro
smb_common_v2/smb_description/urdf/sensor_plugins/: smb_velodyne.gazebo.xacro
smb_common_v2/smb_gazebo/: package.xml
smb_common_v2/smb_gazebo/config/: publishers.yaml
smb_highlevel_controller/: CMakeLists.txt  package.xml  setup.py
smb_highlevel_controller/bag/: smb_navigation.bag
smb_highlevel_controller/config/: default_parameters.yaml  xy_imu_multiplot.xml  xy_multiplot.xml
smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
smb_highlevel_controller/launch/: ekf_localization.launch  smb_highlevel_controller.launch
smb_highlevel_controller/nodes/: smb_highlevel_controller  stop_condition
smb_highlevel_controller/rviz/: ekf_localization.rviz  smb_highlevel_controller.rviz
smb_highlevel_controller/src/: SmbHighlevelController.cpp  smb_highlevel_controller_node.cpp  stop_condition_node.cpp
smb_highlevel_controller/src/smb_highlevel_controller/: SmbHighlevelController.py  __init__.py
smb_highlevel_controller/world/: singlePillar.world
