<?xml version="1.0"?>
<package format="2">
  <name>smb_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The smb_highlevel_controller package</description>
  <maintainer email="nelsen@todo.todo">nelsen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>smb_gazebo</depend>
</package>
